Correct bullet alignment

--- a/css/site.css
+++ b/css/site.css
@@ -57,7 +57,8 @@ li {
 li:before {
     content: "*";
     position: absolute;
-    left: -15px;
+    left: -1.25em;
+    top: 0.15em;
 }
 
 input, textarea {
